test/fail/generics/too_many_generics.lily
#[
SyntaxError: Too many generics.
    from too_many_generics.lily:6:
]#

enum Test[A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T, U, V, W, X, Y, Z, a] {
        Test0
        Test1
}
